--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Songyu Ren (任松宇)
                   </p>
                   <p>
-                    Hello! I'm currently diving deep into the realm of data science as a part-time student in Information Studies in University of Amsterdam, 
+                    Hello! I'm currently diving deep into the realm of data science as a part-time student in University of Amsterdam, 
                     while also harnessing the practicalities of technology as a full-time Software Engineer at Accenture. 
                     My fervor for artificial intelligence is not just a professional interest, but a personal passion. 
                     I bring a vibrant energy to AI development, always seeking innovative ways to blend academic insights with real-world applications.
@@ -57,7 +57,7 @@
               <tr>
                 <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt="University of Amsterdam" src="images/uva.jpeg"></td>
                 <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.uva.nl/en" target="_blank" rel="noopener noreferrer">University of Amsterdam</a>, MSc Information Studies - Data science track(part-time), 2023 - Present</p>
+                  <p><a href="https://www.uva.nl/en" target="_blank" rel="noopener noreferrer">University of Amsterdam</a>, MSc Data science track(part-time), 2023 - Present</p>
                 </td>
               </tr>
               <tr>
@@ -69,7 +69,7 @@
               <tr>
                 <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt = "ANU" src="images/anu.png"></td>
                 <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.anu.edu.au/" target="_blank" rel="noopener noreferrer">The Australian National University</a>, BSc Information systems, Accounting, 2016 - 2019</p>
+                  <p><a href="https://www.anu.edu.au/" target="_blank" rel="noopener noreferrer">The Australian National University</a>, BSc Information systems, Accounting (Double Major), 2016 - 2019</p>
                 </td>
               </tr>
             </tbody>
