--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <tr>
                 <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt="University of Amsterdam" src="images/uva.jpeg"></td>
                 <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.uva.nl/en" target="_blank" rel="noopener noreferrer">University of Amsterdam</a>, MSc Data science track(part-time), 2023 - Present</p>
+                  <p><a href="https://www.uva.nl/en" target="_blank" rel="noopener noreferrer">University of Amsterdam</a>, MSc Data science, 2023 - Present</p>
                 </td>
               </tr>
               <tr>
