--- a/index.html
+++ b/index.html
@@ -2,83 +2,34 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <title>Songyu Ren</title>
-
     <meta name="author" content="Songyu Ren">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20100%20100%22%3E%3Ctext%20y=%22.9em%22%20font-size=%2290%22%3E🌐%3C/text%3E%3C/svg%3E">
   </head>
-
   <body>
-    <table style="width: 100%; max-width: 800px; border: 0; border-spacing: 0; border-collapse: separate; margin-right: auto; margin-left: auto;"><tbody>
-      <tr style="padding: 0;">
-        <td style="padding: 0;">
-          <table style="width: 100%; border: 0; border-spacing: 0; border-collapse: separate; margin-right: auto; margin-left: auto;">
-            <tbody>
-              <tr style="padding: 0;">
-                <td style="padding: 2.5%; width: 63%; vertical-align: middle;">
-                  <p class="name" style="text-align: center;">
-                    Songyu Ren (任松宇)
-                  </p>
-                  <p>
-                    Hello! I'm currently diving deep into the realm of data science as a part-time student in University of Amsterdam, 
-                    while also harnessing the practicalities of technology as a full-time Software Engineer at Accenture. 
-                    My fervor for artificial intelligence is not just a professional interest, but a personal passion. 
-                    I bring a vibrant energy to AI development, always seeking innovative ways to blend academic insights with real-world applications.
-                  </p>
-                  <p style="text-align: center;">
-                    <a href="mailto:rensongyursy@outlook.com">Email</a> &nbsp;/&nbsp;
-                    <a href="data/SongyuRen-CV.pdf" target="_blank" rel="noopener noreferrer">CV</a> &nbsp;/&nbsp;
-                    <a href="https://www.linkedin.com/in/songyu-ren-108b96204/" target="_blank" rel="noopener noreferrer">LinkedIn</a> &nbsp;/&nbsp;
-                    <a href="https://github.com/songyu-Ren" target="_blank" rel="noopener noreferrer">Github</a>
-                  </p>
-                </td>
-                <td style="padding: 2.5%; width: 20%; max-width: 20%;">
-                  <a href="images/rsy.JPG"><img style="width: 100%; max-width: 100%;" alt="Profile Photo" src="images/rsy.JPG" class="hoverZoomLink"></a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table style="width: 100%; border: 0; border-spacing: 0; border-collapse: separate; margin-right: auto; margin-left: auto;">
-          <table style="width: 100%; margin: 0 auto; border-spacing: 0;">
-            <tbody>
-              <tr>
-                <td style="padding-left: 20px;">
-                  <h2>Education</h2>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table style="width: 100%; margin: 0 auto;">
-            <tbody>
-              <tr>
-                <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt="University of Amsterdam" src="images/uva.jpeg"></td>
-                <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.uva.nl/en" target="_blank" rel="noopener noreferrer">University of Amsterdam</a>, MSc Data science, 2023 - Present</p>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt="University of Groningen" src="images/Groningen.png"></td>
-                <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.rug.nl/" target="_blank" rel="noopener noreferrer">University of Groningen</a>, Msc Operation Research, 2021 - 2022</p>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 20px; width: 20%; vertical-align: middle;"><img height="100" alt = "ANU" src="images/anu.png"></td>
-                <td style="width: 60%; vertical-align: middle;">
-                  <p><a href="https://www.anu.edu.au/" target="_blank" rel="noopener noreferrer">The Australian National University</a>, BSc Information systems, Accounting (Double Major), 2016 - 2019</p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </table>	  
-          <table style="width: 100%; border: 0; border-spacing: 0; border-collapse: separate; margin-right: auto; margin-left: auto;">
-          </table>
-        </td>
-      </tr>
-    </table>
+    <div class="container">
+      <div class="profile-section">
+        <p class="name" style="text-align: center;">
+          Songyu Ren (任松宇)
+        </p>
+        <p>
+          Hello! I'm currently diving deep into the realm of data science as a part-time student in University of Amsterdam, 
+          while also harnessing the practicalities of technology as a full-time Software Engineer at Accenture. 
+          My fervor for artificial intelligence is not just a professional interest, but a personal passion. 
+          I bring a vibrant energy to AI development, always seeking innovative ways to blend academic insights with real-world applications.
+        </p>
+        <p style="text-align: center;">
+          <a href="mailto:rensongyursy@outlook.com">Email</a> &nbsp;/&nbsp;
+          <a href="data/SongyuRen-CV.pdf" target="_blank" rel="noopener noreferrer">CV</a> &nbsp;/&nbsp;
+          <a href="https://www.linkedin.com/in/songyu-ren-108b96204/" target="_blank" rel="noopener noreferrer">LinkedIn</a> &nbsp;/&nbsp;
+          <a href="https://github.com/songyu-Ren" target="_blank" rel="noopener noreferrer">Github</a>
+        </p>
+      </div>
+      <div id="experience-section"></div>
+      <div id="education-section"></div>
+    </div>
+    <script src="displayContent.js"></script>
   </body>
 </html>
