--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Songyu Ren</title>
     <meta name="author" content="Songyu Ren">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="./style/index.css">
     <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20100%20100%22%3E%3Ctext%20y=%22.9em%22%20font-size=%2290%22%3E🌐%3C/text%3E%3C/svg%3E">
 </head>
 <body>
